fix(footer): -> horizontal scroll

--- a/frontend/src/widgets/footer/ui/animated-brand-name/animated-brand-name.module.scss
+++ b/frontend/src/widgets/footer/ui/animated-brand-name/animated-brand-name.module.scss
@@ -1,14 +1,11 @@
 .brandName {
   text-align: center;
-  font-size: 17vw;
+  font-size: clamp(2.25rem, 2.25rem + 4vw, 3rem);
   letter-spacing: -0.025em;
   color: #d4d4d8;
+  overflow: hidden;
 
-  @media (min-width: 640px) {
-    font-size: 18vw;
-  }
-
-  @media (min-width: 1536px) {
-    font-size: 14vw;
+  @media (min-width: 300px) {
+    font-size: clamp(3rem, 1.687rem + 7vw, 8.25rem);
   }
 }
